apps/broadcaster/app/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcaster-service
  namespace: broadcaster-dev
  labels:
    app: broadcaster-app
spec:
  type: ClusterIP
  selector:
    app: broadcaster-app
  ports:
    - name: tcp-broadcast
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: http-ws
      port: 8081
      targetPort: 8081
      protocol: TCP
