apps/broadcaster/app/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broadcaster-ui-ingress
  namespace: broadcaster-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /broadcaster(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: broadcaster-service
                port:
                  number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broadcaster-api-ingress
  namespace: broadcaster-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: broadcaster-service
                port:
                  number: 8081
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: broadcaster-service
                port:
                  number: 8081
